--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npx vite build --config vite.config.vercel.ts",
-  "outputDirectory": "dist",
+  "outputDirectory": "dist/public",
   "framework": null,
   "installCommand": "npm install",
   "rewrites": [
